--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Badge Kloud51!</title>
-    <link rel="stylesheet" href="/static/css/style.css">
-</head>
-<body>
-Make me happen Mamir!
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="Alireza Savand">
+        <meta name="description" content="Badge">
+
+        <title>Fixed Top Navbar Example for Bootstrap</title>
+
+        <link rel="icon" href="static/img/favicon.png">
+        <link rel="stylesheet" href="static/css/bootstrap.css">
+        <link rel="stylesheet" href="static/css/font-awesome.css">
+        <link rel="stylesheet" href="static/css/app.css">
+        
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    </head>
+
+    <body>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+
+                    <a class="navbar-brand" href=" ">
+                        <img alt="Badge" src="static/img/favicon.png"> Badge <small>by Kloud51</small>
+                    </a>
+                </div>
+            </div>
+        </nav>
+
+        <div class="container">
+
+            <div class="col-md-7 col-md-offset-1">
+
+                <div class="main">
+
+                    <section class="search">
+
+                        <form onsubmit="return search()">
+                        
+                            <input class="search form-control input-lg" value="html2text" placeholder="Name of package..." required>
+                        
+                        </form>
+                        
+
+                    </section>
+
+                    <section class="urls">
+                        
+                        <ul class="nav nav-tabs">
+                          <li role="presentation" class="active"><a class="bg-me">PyPi</a></li>
+                        </ul>
+
+                        <br>
+
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/v/html2text/badge.png">
+                            </div>
+                            <div class="panel-footer">
+                                Package Version <img class="pull-right badge-image" src="http://badge.kloud51.com/v/html2text/badge.png">
+                            </div>
+                        </div>
+
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/d/html2text/badge.png">
+                            </div>
+                            <div class="panel-footer">
+                                Package Downloads <img class="pull-right badge-image" src="http://badge.kloud51.com/d/html2text/badge.png">
+                            </div>
+                        </div>
+
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/wheel/html2text/badge.png">
+                            </div>
+                            <div class="panel-footer">
+                                Package Wheel <img class="pull-right badge-image" src="http://badge.kloud51.com/wheel/html2text/badge.png">
+                            </div>
+                        </div>
+
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/license/html2text/badge.png">
+                            </div>
+                            <div class="panel-footer">
+                                Package License <img class="pull-right badge-image" src="http://badge.kloud51.com/license/html2text/badge.png">
+                            </div>
+                        </div>
+
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/format/html2text/badge.png">
+                            </div>
+                            <div class="panel-footer">
+                                Package Format <img class="pull-right badge-image" src="http://badge.kloud51.com/format/html2text/badge.png">
+                            </div>
+                        </div>
+
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/py_versions/html2text/badge.png">
+                            </div>
+                            <div class="panel-footer">
+                                Package Python Versions <img class="pull-right badge-image" src="http://badge.kloud51.com/py_versions/html2text/badge.png">
+                            </div>
+                        </div>
+
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/implementation/html2text/badge.png">
+                            </div>
+                            <div class="panel-footer">
+                                Package Implementation <img class="pull-right badge-image" src="http://badge.kloud51.com/implementation/html2text/badge.png">
+                            </div>
+                        </div>
+
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/status/html2text/badge.png">
+                            </div>
+                            <div class="panel-footer">
+                                Package Implementation <img class="pull-right badge-image" src="http://badge.kloud51.com/status/html2text/badge.png">
+                            </div>
+                        </div>
+
+                    </section>
+
+                </div>
+
+            </div>
+
+            <div class="col-md-4">
+
+                <div class="main">
+
+                    <a href="https://github.com/SavandBros/badge" class="btn btn-block btn-lg btn-default" target="_BLANK">
+                        <i class="fa fa-github"></i> Badge
+                    </a>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="footer">
+            
+            <div class="container">
+                
+                <p class="text-right">Copyright 2016 Kloud51.com &copy; All rights reserved.</p>
+
+            </div>
+
+        </div>
+
+        <script src="static/js/jquery.js"></script>
+        <script src="static/js/bootstrap.js"></script>
+        <script src="static/js/app.js"></script>
+    </body>
 </html>
