--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,14 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="Alireza Savand">
         <meta name="description" content="Badge">
 
-        <title>Fixed Top Navbar Example for Bootstrap</title>
+        <title>Badge - Badges for your site to display download totals, latest version using PyPI</title>
 
-        <link rel="icon" href="static/img/favicon.png">
-        <link rel="stylesheet" href="static/css/bootstrap.css">
-        <link rel="stylesheet" href="static/css/font-awesome.css">
-        <link rel="stylesheet" href="static/css/app.css">
+        <link rel="icon" href="/static/img/favicon.png">
+        <link rel="stylesheet" href="/static/css/bootstrap.css">
+        <link rel="stylesheet" href="/static/css/font-awesome.css">
+        <link rel="stylesheet" href="/static/css/app.css">
         
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -32,7 +31,7 @@
                     </button>
 
                     <a class="navbar-brand" href=" ">
-                        <img alt="Badge" src="static/img/favicon.png"> Badge <small>by Kloud51</small>
+                        <img alt="Badge" src="/static/img/favicon.png"> Badge <small>by Kloud51</small>
                     </a>
                 </div>
             </div>
@@ -165,8 +164,8 @@
 
         </div>
 
-        <script src="static/js/jquery.js"></script>
-        <script src="static/js/bootstrap.js"></script>
-        <script src="static/js/app.js"></script>
+        <script src="/static/js/jquery.js"></script>
+        <script src="/static/js/bootstrap.js"></script>
+        <script src="/static/js/app.js"></script>
     </body>
 </html>
