--- a/templates/index.html
+++ b/templates/index.html
@@ -64,73 +64,73 @@
 
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/v/html2text/badge.png">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/pypi/v/html2text/badge.png">
                             </div>
                             <div class="panel-footer">
-                                Package Version <img class="pull-right badge-image" src="http://badge.kloud51.com/v/html2text/badge.png">
+                                Package Version <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/v/html2text/badge.png">
                             </div>
                         </div>
 
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/d/html2text/badge.png">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/pypi/d/html2text/badge.png">
                             </div>
                             <div class="panel-footer">
-                                Package Downloads <img class="pull-right badge-image" src="http://badge.kloud51.com/d/html2text/badge.png">
+                                Package Downloads <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/d/html2text/badge.png">
                             </div>
                         </div>
 
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/wheel/html2text/badge.png">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/pypi/wheel/html2text/badge.png">
                             </div>
                             <div class="panel-footer">
-                                Package Wheel <img class="pull-right badge-image" src="http://badge.kloud51.com/wheel/html2text/badge.png">
+                                Package Wheel <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/wheel/html2text/badge.png">
                             </div>
                         </div>
 
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/license/html2text/badge.png">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/pypi/license/html2text/badge.png">
                             </div>
                             <div class="panel-footer">
-                                Package License <img class="pull-right badge-image" src="http://badge.kloud51.com/license/html2text/badge.png">
+                                Package License <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/license/html2text/badge.png">
                             </div>
                         </div>
 
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/format/html2text/badge.png">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/pypi/format/html2text/badge.png">
                             </div>
                             <div class="panel-footer">
-                                Package Format <img class="pull-right badge-image" src="http://badge.kloud51.com/format/html2text/badge.png">
+                                Package Format <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/format/html2text/badge.png">
                             </div>
                         </div>
 
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/py_versions/html2text/badge.png">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/pypi/py_versions/html2text/badge.png">
                             </div>
                             <div class="panel-footer">
-                                Package Python Versions <img class="pull-right badge-image" src="http://badge.kloud51.com/py_versions/html2text/badge.png">
+                                Package Python Versions <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/py_versions/html2text/badge.png">
                             </div>
                         </div>
 
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/implementation/html2text/badge.png">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/pypi/implementation/html2text/badge.png">
                             </div>
                             <div class="panel-footer">
-                                Package Implementation <img class="pull-right badge-image" src="http://badge.kloud51.com/implementation/html2text/badge.png">
+                                Package Implementation <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/implementation/html2text/badge.png">
                             </div>
                         </div>
 
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/status/html2text/badge.png">
+                                <input class="form-control badge-url" readonly value="http://badge.kloud51.com/pypi/status/html2text/badge.png">
                             </div>
                             <div class="panel-footer">
-                                Package Implementation <img class="pull-right badge-image" src="http://badge.kloud51.com/status/html2text/badge.png">
+                                Package Implementation <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/status/html2text/badge.png">
                             </div>
                         </div>
 
