--- a/static/css/app.css
+++ b/static/css/app.css
@@ -27,7 +27,7 @@ input {
     background: #323232;
 }
 
-.navbar-brand > img {
+.navbar-brand img {
     display: inline-block;
     width: 32px;
     margin: -5px 0;
@@ -39,7 +39,7 @@ input {
     border: 1px solid #aaa;
     border-top: none;
     padding: 40px 30px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
     margin-top: -4px;
     -webkit-border-radius: 4px;
             border-radius: 4px;
@@ -52,8 +52,6 @@ input.search {
             border-radius: 100px;
     -webkit-box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.1);
             box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.1);
-    -webkit-transition: all 0.3s ease-in-out;
-            transition: all 0.3s ease-in-out;
 }
 
 input.search:FOCUS {
