Add more links to sidebar

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,7 @@
                             <input onclick="this.select()" class="search form-control input-lg" value="html2text" placeholder="Name of package..." required>
                         
                         </form>
+
                         <div class="btn-group pull-right format-switcher" data-toggle="buttons">
                             <label class="btn btn-primary btn-sm"        onclick="set_format(0)">
                                 <input type="radio" name="options" autocomplete="off"> PNG
@@ -146,7 +147,15 @@
                 <div class="main">
 
                     <a href="https://github.com/SavandBros/badge" class="btn btn-block btn-lg btn-default" target="_BLANK">
-                        <i class="fa fa-github"></i> Badge
+                        <i class="fa fa-fw fa-github"></i> Badge
+                    </a>
+
+                    <a href="https://github.com/SavandBros/badge/issues" class="btn btn-block btn-default" target="_BLANK">
+                        Issues
+                    </a>
+
+                    <a href="https://kloud51.com" class="btn btn-block btn-default" target="_BLANK">
+                        Kloud51
                     </a>
 
                 </div>
