--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="/static/css/bootstrap.css">
         <link rel="stylesheet" href="/static/css/font-awesome.css">
         <link rel="stylesheet" href="/static/css/app.css">
-        
+
         <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
             <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -45,10 +45,10 @@
 
                     <section class="search">
 
-                        <form onsubmit="return search()">
-                        
+                        <form onsubmit="return search(event)">
+
                             <input onclick="this.select()" class="search form-control input-lg" value="html2text" placeholder="Name of package..." required>
-                        
+
                         </form>
 
                         <div class="btn-group pull-right format-switcher" data-toggle="buttons">
@@ -59,11 +59,11 @@
                                 <input type="radio" name="options" autocomplete="off"> SVG
                             </label>
                         </div>
-                        
+
                     </section>
 
                     <section class="urls">
-                        
+
                         <ul class="nav nav-tabs services">
                             <li role="presentation" class="active"><a class="bg-me">PyPi</a></li>
                         </ul>
@@ -165,9 +165,9 @@
         </div>
 
         <div class="footer">
-            
+
             <div class="container">
-                
+
                 <p class="text-right">Copyright 2016 Kloud51.com &copy; All rights reserved.</p>
 
             </div>
