--- a/static/css/app.css
+++ b/static/css/app.css
@@ -7,14 +7,21 @@ body {
     outline: 0 !important;
 }
 
-section.urls {
-    margin-top: 40px;
-}
-
-input {
+input,
+.services li a {
     -webkit-transition: all 0.3s ease-in-out !important;
             transition: all 0.3s ease-in-out !important;
 }
+
+a {
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+}
+
+::-moz-selection { background: #5DC63D; color: #FFF; }
+::selection { background: #5DC63D; color: #FFF; }
 
 .bg-me {
     background: whitesmoke !important;
@@ -46,6 +53,7 @@ input {
 }
 
 input.search {
+    color: #5DC63D;
     padding: 0 22px;
     background: #eee;
     -webkit-border-radius: 100px;
@@ -56,6 +64,7 @@ input.search {
 
 input.search:FOCUS {
     background: rgba(255, 255, 255, 0.5);
+    border-bottom-color: #5DC63D;
 }
 
 .format-switcher {
