--- a/static/css/app.css
+++ b/static/css/app.css
@@ -55,16 +55,23 @@ a {
 input.search {
     color: #5DC63D;
     padding: 0 22px;
-    background: #eee;
-    -webkit-border-radius: 100px;
-            border-radius: 100px;
-    -webkit-box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.1);
-            box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.1);
+    margin: 30px 0;
+    background: none;
+    border: none;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+    -webkit-text-shadow: 1px 1px 1px #ddd;
+            text-shadow: 1px 1px 1px #ddd;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    -webkit-border-radius: 0;
+            border-radius: 0;
 }
 
 input.search:FOCUS {
     background: rgba(255, 255, 255, 0.5);
     border-bottom-color: #5DC63D;
+    -webkit-box-shadow: none;
+            box-shadow: none;
 }
 
 .format-switcher {
