Chnage sidebar links detail

--- a/templates/index.html
+++ b/templates/index.html
@@ -143,15 +143,15 @@
 
                 <div class="main">
 
-                    <a href="https://github.com/SavandBros/badge" class="btn btn-block btn-lg btn-default" target="_BLANK">
-                        <i class="fa fa-fw fa-github"></i> Badge
+                    <a class="btn btn-block btn-lg btn-success" target="_BLANK" href="https://github.com/SavandBros/badge" >
+                        Badge <small>Github</small>
                     </a>
 
-                    <a href="https://github.com/SavandBros/badge/issues" class="btn btn-block btn-default" target="_BLANK">
+                    <a class="btn btn-block btn-default"        target="_BLANK" href="https://github.com/SavandBros/badge/issues" >
                         Issues
                     </a>
 
-                    <a href="https://kloud51.com" class="btn btn-block btn-default" target="_BLANK">
+                    <a class="btn btn-block btn-default"        target="_BLANK" href="https://kloud51.com" >
                         Kloud51
                     </a>
 
