--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Badge - Badges for your site to display download totals, latest version using PyPI">
 
-        <title>Badge - Badges for your site to display download totals, latest version using PyPI</title>
+        <title>Badge - Badges for your site to display download totals, latest version using and much more <3</title>
 
         <link rel="icon"       href="/static/img/favicon.png">
         <link rel="stylesheet" href="/static/css/bootstrap.css">
